can-socket/tests/compile-fail/id_too_high3.stderr
error[E0080]: evaluation of `main::{constant#0}` failed
 --> tests/compile-fail/id_too_high3.rs:2:12
  |
2 |     let _id = can_socket::can_id!(extended: 0x2000_0000);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: invalid extended CAN ID
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `can_socket::can_id` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
 --> tests/compile-fail/id_too_high3.rs:2:12
  |
2 |     let _id = can_socket::can_id!(extended: 0x2000_0000);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::extended_id` which comes from the expansion of the macro `can_socket::can_id` (in Nightly builds, run with -Z macro-backtrace for more info)
